--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,7 @@
 .photoList__item {
   display: flex;
   justify-content: center;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
 }
 
@@ -24,4 +24,13 @@
 
 .nav__item {
   margin-left: 10px;
+}
+
+.news__list {
+  list-style: none;
+  padding: 10px;
+}
+
+.required {
+  color: red;
 }
